--- a/EducationalInstitution/EducationalInstitution.Api/appsettings.json
+++ b/EducationalInstitution/EducationalInstitution.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=EducationalInstitution;Integrated Security=True;Pooling=False;Encrypt=False"
+  }
 }
