--- a/EducationalInstitution.Api/EducationalInstitution.Api.csproj
+++ b/EducationalInstitution.Api/EducationalInstitution.Api.csproj
@@ -23,14 +23,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.1.0-preview" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="7.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.0-preview" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\Identity\" />
   </ItemGroup>
 
 </Project>
