edit Auth service and edit migration

--- a/EducationalInstitution.Api/appsettings.json
+++ b/EducationalInstitution.Api/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+  "AllowAnyOrigin": "",
+
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=EducationalInstitution;Integrated Security=True;Pooling=False;Encrypt=False"
   },
